# FamilyFinanceProject

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README-Docker.md  README.md  config.py  conversationbot  deploy-simple.sh  docker-compose.dev.yml  docker-compose.yml  generate_treeview.py  pyproject.toml  run_server.py  test.py
.claude/agents/: architecture-migration-agent.md  docker-cloud-deployment.md  google-sheets-specialist.md  lead-devops.md  lead-qa.md  (+6 more)
aidocs/: about_google_sheet.md  architecture.md  code_style.md  commands.md  how_to_tree_view.md  infrastructure.md  prd.md  tests.md  treeview.md
docker/: entrypoint.sh  healthcheck.sh
docs/: PRD.md  TreeView.md  treeview_usage.md
google_credentials/: token.json
scripts/: generate_treeview.py
src/: agent_integration.py  server.py
voice_messages/: voice_message_20240912_23-34-28_496555.oga  voice_message_20240912_23-36-52_110220.oga  voice_message_20240912_23-37-40_986831.oga  voice_message_20240912_23-37-58_498966.oga  voice_message_20240912_23-38-14_278894.oga  voice_message_20240912_23-38-27_680901.oga  voice_message_20240912_23-39-17_604595.oga  voice_message_20240912_23-41-48_853488.oga  voice_message_20240912_23-44-23_598923.oga  voice_message_20240912_23-44-39_446586.oga  voice_message_20240913_11-24-47_378343.oga  voice_message_20240913_11-25-13_485015.oga  voice_message_20240913_17-46-11_206739.oga  voice_message_20240913_17-50-29_866533.oga  voice_message_20240913_17-55-46_039676.oga  voice_message_20240913_18-44-00_377664.oga  voice_message_20240913_19-19-03_748168.oga
(+31 files in other folders)
